# Custom-config-manager

./: Dockerfile  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg
quipconfig/: quipConfigFile.py  quipConfigPackage.py  quipRemoteExecution.py  quipRemoteExecutionException.py  quipRemoteHost.py  quipRoleConfig.py  quipconfig.py
quipconfig/configs/: test_config.yml  web_config.yml
tests/: test_file_class.py  test_package_class.py  test_remote_exec  test_remote_exec.py  test_remote_host_class.py  test_role_config.py  test_service_restart.py
