[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quipconfig"
version = "0.0.1"
authors = [
  { name="Bryan J Myers", email="myersb89@gmail.com" },
]
description = "A custom configuration management tool"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/myersb89/Custom-config-manger"